--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "@supabase/supabase-js": "^2.39.0",
     "mcp-handler": "^1.0.3",
+    "pg": "^8.11.3",
     "zod": "^3.24.1"
   },
   "devDependencies": {
