--- a/package.json
+++ b/package.json
@@ -21,12 +21,9 @@
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@supabase/supabase-js": "^2.39.0",
-    "mcp-handler": "^1.0.3",
+    "mcp-use": "^1.1.2",
     "pg": "^8.11.3",
     "zod": "^3.24.1"
-  },
-  "devDependencies": {
-    "vercel": "^39.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
