--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mcp-use/inspector": "^0.4.2",
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@supabase/supabase-js": "^2.39.0",
+    "dotenv": "^17.2.3",
     "mcp-use": "^1.1.2",
     "pg": "^8.11.3",
     "zod": "^3.24.1"
