--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "echo 'No build step required'",
-    "start": "node server.js",
-    "test": "./test-mcp.sh",
-    "dev": "node server.js"
+    "start": "node server.js"
   },
   "keywords": [
     "mcp",
@@ -21,13 +19,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@mcp-use/inspector": "^0.4.2",
     "@modelcontextprotocol/sdk": "^1.0.4",
     "@supabase/supabase-js": "^2.39.0",
-    "dotenv": "^17.2.3",
-    "mcp-use": "^1.1.2",
+    "mcp-handler": "^1.0.3",
     "pg": "^8.11.3",
     "zod": "^3.24.1"
+  },
+  "devDependencies": {
+    "vercel": "^39.2.4"
   },
   "engines": {
     "node": ">=18.0.0"
