--- a/package.json
+++ b/package.json
@@ -23,7 +23,12 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "vercel": "^39.2.4"
+    "vercel": "^48.5.0"
+  },
+  "overrides": {
+    "esbuild": "^0.25.11",
+    "path-to-regexp": "^8.3.0",
+    "undici": "^7.16.0"
   },
   "engines": {
     "node": ">=18.0.0"
