--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "MIT",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
+    "@supabase/supabase-js": "^2.48.1",
     "mcp-handler": "^1.0.3",
+    "pg": "^8.13.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
