fix: implement proper OAuth discovery with dedicated endpoint
- Created dedicated api/oauth.js endpoint for OAuth metadata
- Fixed mcp-handler configuration with required: false for discovery
- Added authorization_servers configuration
- Updated tool descriptions to indicate auth requirements
- Removed dependency on mcp-handler's automatic OAuth endpoint

This should now properly trigger OAuth flow in Claude and Cursor.

--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "memory": 1024,
         "maxDuration": 10
       },
-      "api/oauth-metadata.js": {
+      "api/oauth.js": {
         "memory": 256,
         "maxDuration": 5
       }
@@ -12,7 +12,7 @@
     "rewrites": [
       {
         "source": "/.well-known/oauth-protected-resource",
-        "destination": "/api/oauth-metadata"
+        "destination": "/api/oauth"
       }
     ],
     "headers": [
@@ -30,6 +30,19 @@
           {
             "key": "Access-Control-Allow-Headers",
             "value": "Content-Type, Authorization"
+          }
+        ]
+      },
+      {
+        "source": "/.well-known/(.*)",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, OPTIONS"
           }
         ]
       }
