--- a/vercel.json
+++ b/vercel.json
@@ -7,11 +7,27 @@
       "api/oauth.js": {
         "memory": 256,
         "maxDuration": 5
+      },
+      "api/oauth/authorize.js": {
+        "memory": 256,
+        "maxDuration": 5
+      },
+      "api/oauth/callback.js": {
+        "memory": 256,
+        "maxDuration": 5
+      },
+      "api/oauth/token.js": {
+        "memory": 256,
+        "maxDuration": 10
       }
     },
     "rewrites": [
       {
         "source": "/.well-known/oauth-protected-resource",
+        "destination": "/api/oauth"
+      },
+      {
+        "source": "/.well-known/oauth-authorization-server",
         "destination": "/api/oauth"
       }
     ],
